Remove inline styles and ensure CSS compatibility; all backdrop-filter rules are paired with -webkit-backdrop-filter

--- a/index.html
+++ b/index.html
@@ -1220,9 +1220,9 @@
     <section id="contact" style="background: #111; color: #fff;">
         <div class="contact-container">
             <h2 class="section-title">Join the Movement!</h2>
-            <p class="section-subtitle" style="color: #fff;">We’re always excited to welcome new friends, partners, and supporters. Whether you want to volunteer, donate, or collaborate, your passion can help shape Amboseli’s future. Reach out, share your ideas, or simply say hello—together, we can make a world of difference.<br><br>
-            <b>Email:</b> <a href="mailto:samuellekato91@gmail.com" style="color:#00ff87;">samuellekato91@gmail.com</a><br>
-            <b>Phone:</b> <a href="tel:+254710334396" style="color:#00ff87;">+254710334396</a><br>
+            <p class="section-subtitle">We’re always excited to welcome new friends, partners, and supporters. Whether you want to volunteer, donate, or collaborate, your passion can help shape Amboseli’s future. Reach out, share your ideas, or simply say hello—together, we can make a world of difference.<br><br>
+            <b>Email:</b> <a href="mailto:samuellekato91@gmail.com">samuellekato91@gmail.com</a><br>
+            <b>Phone:</b> <a href="tel:+254710334396">+254710334396</a><br>
             <b>Visit:</b> Amboseli, Kenya<br>
             Or simply fill out the contact form below—we’ll get back to you soon!</p>
             <div class="contact-form">
